Set up Firebase hosting for Staging env. Deployment is triggered on pull request and merge. Preview of build will be available in the comment section of created PR.

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,8 @@
 {
   "projects": {
-    "default": "cdkz-ui-prod"
-  }
+    "default": "cdkz-ui-prod",
+    "staging": "cdkz-ui-staging"
+  },
+  "targets": {},
+  "etags": {}
 }
