--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "classcat": "^5.0.4"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
