--- a/package.json
+++ b/package.json
@@ -14,16 +14,16 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "classcat": "^5.0.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "classcat": "^5.0.4"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/node": "^20.11.17",
-    "@types/react": "^18.2.55",
+    "@types/node": "^20.11.19",
+    "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
-    "@typescript-eslint/eslint-plugin": "^7.0.1",
-    "@typescript-eslint/parser": "^7.0.1",
+    "@typescript-eslint/eslint-plugin": "^7.0.2",
+    "@typescript-eslint/parser": "^7.0.2",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.55.0",
     "eslint-config-prettier": "^9.1.0",
@@ -38,9 +38,9 @@
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
-    "sass": "^1.71.0",
+    "sass": "^1.71.1",
     "typescript": "^5.3.3",
-    "vite": "^5.1.1",
+    "vite": "^5.1.3",
     "vite-plugin-svgr": "^4.2.0"
   }
 }
