--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "prettier": "^3.2.5",
     "sass": "^1.71.0",
     "typescript": "^5.3.3",
-    "vite": "^5.1.1"
+    "vite": "^5.1.1",
+    "vite-plugin-svgr": "^4.2.0"
   }
 }
