--- a/package.json
+++ b/package.json
@@ -9,22 +9,33 @@
     "build:staging": "vite build --mode staging",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
+    "compile": "dotenv -- graphql-codegen",
+    "watch": "graphql-codegen -w",
     "lint:types": "tsc",
     "lint-staged": "lint-staged -r -v",
     "prepare": "husky"
   },
   "dependencies": {
+    "@apollo/client": "^3.9.5",
     "classcat": "^5.0.4",
+    "graphql": "^15.8.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router": "^6.22.1",
+    "react-router-dom": "^6.22.1"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^5.0.2",
+    "@graphql-codegen/client-preset": "^4.2.4",
+    "@graphql-typed-document-node/core": "^3.2.0",
+    "@types/graphql": "^14.5.0",
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
     "@vitejs/plugin-react": "^4.2.1",
+    "dotenv-cli": "^7.3.0",
     "eslint": "^8.55.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-alias": "~1.1.2",
