--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "vite build",
     "build:staging": "vite build --mode staging",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint-fix": "eslint . --ext ts,tsx --fix",
     "preview": "vite preview",
     "compile": "dotenv -- graphql-codegen",
     "watch": "graphql-codegen -w",
