--- a/.eslintrc
+++ b/.eslintrc
@@ -107,12 +107,22 @@
           },
           {
             "group": "external",
-            "pattern": "@/features/**",
+            "pattern": "@/features/**/*.tsx",
             "position": "after"
           },
           {
             "group": "external",
-            "pattern": "@/components/**",
+            "pattern": "@/components/**/*.tsx",
+            "position": "after"
+          },
+          {
+            "group": "external",
+            "pattern": "@/features/**/*.ts",
+            "position": "after"
+          },
+          {
+            "group": "external",
+            "pattern": "@/components/**/*.ts",
             "position": "after"
           },
           {
@@ -127,17 +137,22 @@
           },
           {
             "group": "external",
-            "pattern": "@/assets/**",
+            "pattern": "@/constants/**",
             "position": "after"
           },
           {
             "group": "external",
+            "pattern": "@/assets/**",
+            "position": "after"
+          },
+          {
+            "group": "object",
             "pattern": "./*.svg",
             "position": "after"
           },
           {
             "pattern": "./*.scss",
-            "group": "sibling",
+            "group": "object",
             "position": "after"
           }
         ],
